<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_1"
    tools:context="com.easyticket.et.zxy.activity.Refund">

    <!--标题栏-->
    <com.easyticket.et.zxy.util.TitleBar
        android:id="@+id/home_deal_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LineSize"
            android:layout_marginTop="@dimen/paddingtop"
            android:background="@drawable/line_ovel"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginLeft="@dimen/button_space"
                android:layout_gravity="center_vertical"
                android:src="@drawable/alldeal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/button_space"
                android:textSize="@dimen/deal_page_size"
                android:text="@string/allDeal"
                />

        </LinearLayout>

        <GridView
            android:id="@+id/gv_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/grid_deal_size"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:horizontalSpacing="2dip"
            android:numColumns="4"
            android:scrollbars="none"
            android:verticalSpacing="5dip" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/appbar_padding_top"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LineSize"
            android:background="@drawable/line_ovel"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginLeft="@dimen/button_space"
                android:layout_gravity="center_vertical"
                android:src="@drawable/redwallet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/button_space"
                android:textSize="@dimen/deal_page_size"
                android:text="@string/myWallet"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/icon_size"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/button_space"
                    android:textSize="@dimen/deal_page_size"
                    android:text="100"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/button_space"
                    android:textSize="@dimen/deal_page_size"
                    android:text="@string/balance"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="@dimen/icon_size"
                android:layout_marginTop="@dimen/appbar_padding_top"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/button_space"
                    android:textSize="@dimen/deal_page_size"
                    android:text="10"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/button_space"
                    android:textSize="@dimen/deal_page_size"
                    android:text="@string/discount"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LineSize"
        android:background="@drawable/line_ovel"
        android:layout_marginTop="@dimen/appbar_padding_top"
        >
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginLeft="@dimen/button_space"
            android:layout_gravity="center_vertical"
            android:src="@drawable/gift" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/gray"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/button_space"
            android:textSize="@dimen/deal_page_size"
            android:text="@string/gift"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LineSize"
        android:background="@drawable/line_ovel"
        android:layout_marginTop="@dimen/appbar_padding_top"
        >
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginLeft="@dimen/button_space"
            android:layout_gravity="center_vertical"
            android:src="@drawable/favs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/gray"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/button_space"
            android:textSize="@dimen/deal_page_size"
            android:text="@string/near_look"
            />
    </LinearLayout>

</LinearLayout>
